[tool.poetry]
name = "ppo"
version = "0.1.0"
description = "A simple implementation of ppo."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = {extras = ["all"], version = "^1.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
